# cotli-helper

./: .gitignore  Cargo.toml  LICENSE  README.md  example_user_data.toml
src/: best_formation_search.rs  cli.rs  crusader.rs  dps.rs  gear.rs  lib.rs  main.rs  talent.rs
src/aura/: condition.rs  mod.rs  modifier.rs  target.rs
src/formation/: coordinate.rs  layouts.rs  mod.rs
src/formation_search/: cache.rs  dummy_cache.rs  mod.rs  parameters.rs  search_policy.rs  set_like.rs  unused_slots.rs
src/user_data/: crusader_data.rs  from_toml.rs  mod.rs  talent_data.rs
tests/: lib.rs  support.rs
tests/crusaders/: arachnobuddy.rs  broot.rs  emo_werewolf.rs  groklok_the_orc.rs  jim_the_lumberjack.rs  kyle_the_party_bro.rs  mod.rs  sally_the_succubus.rs  sarah_the_collector.rs  sasha_the_fierce_warrior.rs  sisaron_the_dragon_sorceress.rs  veronica_the_android_archer.rs  washed_up_hermit.rs
